; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslfiles.c_FlOpenInputFile.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslfiles.c_FlOpenInputFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ASL_FILE_INPUT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c"rt\00", align 1
@AslGbl_Files = common dso_local global %struct.TYPE_2__* null, align 8
@AslCompilerin = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FlOpenInputFile(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @ASL_FILE_INPUT, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @FlOpenFile(i64 %3, i8* %4, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @AslGbl_Files, align 8
  %7 = load i64, i64* @ASL_FILE_INPUT, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* @AslCompilerin, align 4
  %11 = load i32, i32* @AE_OK, align 4
  ret i32 %11
}

declare dso_local i32 @FlOpenFile(i64, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
